--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,169 +1,128 @@
 trigger:
-- main
+  - master
 
 variables:
   solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
-  dockerfilePath: 'docker/Dockerfile'
   imageName: 'k8s-control-panel'
   imageTag: '$(Build.BuildId)'
+  kubernetesNamespace: 'k8s-control-panel'
+  dockerfilePath: 'docker/Dockerfile'
 
 stages:
 - stage: Build
   displayName: 'Build and Test'
   jobs:
   - job: Build
+    displayName: 'Build Application'
     pool:
-      vmImage: 'ubuntu-latest'
-    
+      name: 'Default'
     steps:
-    - task: UseDotNet@2
-      displayName: 'Use .NET 8.0'
-      inputs:
-        version: '8.0.x'
-        includePreviewVersions: false
-
-    - task: NodeTool@0
-      displayName: 'Use Node.js'
-      inputs:
-        versionSpec: '18.x'
-
     - script: |
+        echo "=== Environment Information ==="
+        echo "Agent OS: $(Agent.OS)"
+        echo "Agent Architecture: $(Agent.Architecture)"
+        echo "Working Directory: $(System.DefaultWorkingDirectory)"
+        echo ""
+        echo "=== Tool Versions ==="
         dotnet --version
         node --version
         npm --version
-      displayName: 'Display versions'
+        docker --version
+        kubectl version --client
+      displayName: 'Display Environment Information'
 
-    - task: DotNetCoreCLI@2
+    - script: 'dotnet restore $(solution)'
       displayName: 'Restore NuGet packages'
-      inputs:
-        command: 'restore'
-        projects: '$(solution)'
-        feedsToUse: 'select'
 
-    - task: DotNetCoreCLI@2
+    - script: 'dotnet build $(solution) --configuration $(buildConfiguration) --no-restore'
       displayName: 'Build solution'
-      inputs:
-        command: 'build'
-        projects: '$(solution)'
-        arguments: '--configuration $(buildConfiguration) --no-restore'
 
-    - task: DotNetCoreCLI@2
-      displayName: 'Run tests'
-      inputs:
-        command: 'test'
-        projects: '**/*Tests/*.csproj'
-        arguments: '--configuration $(buildConfiguration) --no-build --collect:"XPlat Code Coverage"'
-        publishTestResults: true
-
-    - task: DotNetCoreCLI@2
-      displayName: 'Publish API'
-      inputs:
-        command: 'publish'
-        publishWebProjects: false
-        projects: 'src/Backend/KubernetesControlPanel.API/KubernetesControlPanel.API.csproj'
-        arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/api'
-        zipAfterPublish: false
+    - script: 'dotnet test src/Backend/KubernetesControlPanel.Tests/KubernetesControlPanel.Tests.csproj --configuration $(buildConfiguration) --no-build'
+      displayName: 'Run unit tests'
+      continueOnError: true
 
     - script: |
         cd src/Frontend
-        npm install
+        npm ci
+      displayName: 'Install npm dependencies'
+
+    - script: |
+        cd src/Frontend
         npm run build
-      displayName: 'Build Frontend'
-      workingDirectory: '$(Build.SourcesDirectory)'
+      displayName: 'Build React application'
 
-    - task: CopyFiles@2
-      displayName: 'Copy Frontend build to API'
-      inputs:
-        sourceFolder: 'src/Frontend/build'
-        contents: '**'
-        targetFolder: '$(Build.ArtifactStagingDirectory)/api/wwwroot'
-
-    - task: PublishBuildArtifacts@1
-      displayName: 'Publish build artifacts'
-      inputs:
-        pathToPublish: '$(Build.ArtifactStagingDirectory)'
-        artifactName: 'drop'
-
-- stage: Docker
-  displayName: 'Build Docker Image'
+- stage: Package
+  displayName: 'Package Application'
   dependsOn: Build
-  condition: succeeded()
   jobs:
-  - job: Docker
+  - job: Package
+    displayName: 'Create Docker Image'
     pool:
-      vmImage: 'ubuntu-latest'
-    
+      name: 'Default'
     steps:
-    - task: Docker@2
+    - script: 'echo "Building Docker image: $(imageName):$(imageTag)"'
+      displayName: 'Echo build info'
+
+    - script: 'docker build -t $(imageName):$(imageTag) -t $(imageName):latest -f $(dockerfilePath) .'
       displayName: 'Build Docker image'
-      inputs:
-        containerRegistry: 'your-acr-connection'
-        repository: '$(imageName)'
-        command: 'buildAndPush'
-        Dockerfile: '$(dockerfilePath)'
-        tags: |
-          $(imageTag)
-          latest
-        buildContext: '$(Build.SourcesDirectory)'
+
+    - script: 'docker images | grep $(imageName)'
+      displayName: 'List Docker images'
 
 - stage: Deploy
   displayName: 'Deploy to Kubernetes'
-  dependsOn: Docker
-  condition: succeeded()
+  dependsOn: Package
   jobs:
   - job: Deploy
+    displayName: 'Deploy to Kubernetes Cluster'
     pool:
-      vmImage: 'ubuntu-latest'
-    
+      name: 'Default'
     steps:
-    - task: KubernetesManifest@0
-      displayName: 'Create namespace'
-      inputs:
-        action: 'deploy'
-        kubernetesServiceConnection: 'your-k8s-connection'
-        namespace: 'k8s-control-panel'
-        manifests: |
-          apiVersion: v1
-          kind: Namespace
-          metadata:
-            name: k8s-control-panel
+    - script: |
+        echo "=== Kubernetes Cluster Information ==="
+        kubectl cluster-info
+        kubectl get nodes
+        echo ""
+        echo "=== Current Namespace Status ==="
+        kubectl get all -n $(kubernetesNamespace)
+      displayName: 'Display cluster information'
 
-    - task: KubernetesManifest@0
-      displayName: 'Deploy RBAC'
-      inputs:
-        action: 'deploy'
-        kubernetesServiceConnection: 'your-k8s-connection'
-        namespace: 'k8s-control-panel'
-        manifests: 'k8s/rbac.yaml'
+    - script: 'kubectl create namespace $(kubernetesNamespace) --dry-run=client -o yaml | kubectl apply -f -'
+      displayName: 'Ensure namespace exists'
 
-    - task: KubernetesManifest@0
-      displayName: 'Deploy application'
-      inputs:
-        action: 'deploy'
-        kubernetesServiceConnection: 'your-k8s-connection'
-        namespace: 'k8s-control-panel'
-        manifests: |
-          k8s/deployment.yaml
-          k8s/service.yaml
-          k8s/ingress.yaml
-        containers: 'your-acr.azurecr.io/$(imageName):$(imageTag)'
+    - script: 'kubectl apply -f k8s/rbac.yaml'
+      displayName: 'Apply RBAC configuration'
 
-    - task: KubernetesManifest@0
-      displayName: 'Verify deployment'
-      inputs:
-        action: 'deploy'
-        kubernetesServiceConnection: 'your-k8s-connection'
-        namespace: 'k8s-control-panel'
-        manifests: |
-          apiVersion: v1
-          kind: Pod
-          metadata:
-            name: k8s-control-panel-verification
-          spec:
-            containers:
-            - name: verification
-              image: curlimages/curl
-              command: ['curl', '-f', 'http://k8s-control-panel-service:80/health']
-            restartPolicy: Never 
+    - script: 'kubectl set image deployment/k8s-control-panel k8s-control-panel-api=$(imageName):$(imageTag) -n $(kubernetesNamespace) --record'
+      displayName: 'Update deployment with new image'
+      continueOnError: true
+
+    - script: |
+        kubectl apply -f k8s/deployment.yaml
+        kubectl apply -f k8s/service.yaml
+        kubectl apply -f k8s/ingress.yaml
+      displayName: 'Apply Kubernetes manifests'
+
+    - script: 'kubectl rollout status deployment/k8s-control-panel -n $(kubernetesNamespace) --timeout=600s'
+      displayName: 'Wait for deployment rollout'
+
+    - script: |
+        echo "=== Deployment Status ==="
+        kubectl get pods -n $(kubernetesNamespace)
+        kubectl get services -n $(kubernetesNamespace)
+        kubectl get ingress -n $(kubernetesNamespace)
+        echo ""
+        echo "=== Pod Logs (first pod) ==="
+        kubectl logs -n $(kubernetesNamespace) -l app=k8s-control-panel --tail=50
+      displayName: 'Verify deployment status'
+      continueOnError: true
+
+    - script: |
+        echo "=== Service Endpoints ==="
+        kubectl get endpoints -n $(kubernetesNamespace)
+        echo ""
+        echo "=== Ingress Status ==="
+        kubectl describe ingress -n $(kubernetesNamespace)
+      displayName: 'Display service endpoints'
+      continueOnError: true 
