--- a/src/Backend/KubernetesControlPanel.API/KubernetesControlPanel.API.csproj
+++ b/src/Backend/KubernetesControlPanel.API/KubernetesControlPanel.API.csproj
@@ -18,7 +18,8 @@
     <PackageReference Include="KubernetesClient" Version="17.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
