--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       serviceAccountName: k8s-control-panel
       containers:
       - name: k8s-control-panel-api
-        image: YOUR_ACTUAL_DOCKERHUB_USERNAME/k8s-control-panel:latest
+        image: k8s-control-panel:latest
         ports:
         - containerPort: 80
           name: http
