--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,12 @@ variables:
   imageTag: '$(Build.BuildId)'
   kubernetesNamespace: 'k8s-control-panel'
   dockerfilePath: 'docker/Dockerfile'
+  # Ubuntu server details - update these with your actual server details
+  ubuntuServer: 'vmi2671559'
+  ubuntuUser: 'root'
+  # Alternative: Use a simple registry (uncomment if SSH doesn't work)
+  # dockerRegistry: 'registry.hub.docker.com'
+  # fullImageName: '$(dockerRegistry)/$(imageName)'
 
 stages:
 - stage: Build
@@ -39,12 +45,23 @@ stages:
   dependsOn: Build
   jobs:
   - job: Package
-    displayName: 'Create Docker Image'
+    displayName: 'Create and Transfer Docker Image'
     pool:
       name: 'Default'
     steps:
     - script: 'docker build -t $(imageName):$(imageTag) -t $(imageName):latest -f $(dockerfilePath) .'
       displayName: 'Build Docker image'
+
+    - script: 'docker save $(imageName):latest > $(imageName).tar'
+      displayName: 'Save Docker image to tar file'
+
+    - script: 'scp $(imageName).tar $(ubuntuUser)@$(ubuntuServer):/tmp/'
+      displayName: 'Transfer image to Ubuntu server'
+      continueOnError: true
+
+    - script: 'ssh $(ubuntuUser)@$(ubuntuServer) "docker load < /tmp/$(imageName).tar && rm /tmp/$(imageName).tar"'
+      displayName: 'Load image on Ubuntu server'
+      continueOnError: true
 
     - script: 'docker images | grep $(imageName)'
       displayName: 'List Docker images'
