--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -22,13 +22,11 @@ spec:
         ports:
         - containerPort: 80
           name: http
-        - containerPort: 443
-          name: https
         env:
         - name: ASPNETCORE_ENVIRONMENT
           value: "Production"
         - name: ASPNETCORE_URLS
-          value: "http://+:80;https://+:443"
+          value: "http://+:80"
         - name: KUBERNETES_SERVICE_HOST
           valueFrom:
             fieldRef:
